[gd_scene load_steps=10 format=3 uid="uid://gm1102ss042f"]

[ext_resource type="Script" uid="uid://33q5yhx2riwv" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="FontFile" uid="uid://bky6yu22q3u5p" path="res://fonts/VortexDancerLaserItalic-6Rp5A.otf" id="1_48xlc"]
[ext_resource type="Texture2D" uid="uid://ccblk7f0dgg6s" path="res://Sprites/pongBG.png" id="2_ce3w2"]
[ext_resource type="FontFile" uid="uid://cjhwwl8hvt21l" path="res://fonts/VortexDancerLaser-5yx5V.otf" id="3_n45e2"]
[ext_resource type="Theme" uid="uid://qtqwe4uege1o" path="res://Scenes/main_menu.tres" id="4_opfnp"]
[ext_resource type="AudioStream" uid="uid://bpt15cqnlk06j" path="res://Sounds/ball bounce sound.wav" id="6_opfnp"]

[sub_resource type="LabelSettings" id="LabelSettings_opfnp"]
font_size = 65
font_color = Color(0.0470588, 0.647059, 0.854902, 1)
outline_size = 10
outline_color = Color(0.321569, 0.258824, 0.568627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ce3w2"]
font = ExtResource("3_n45e2")
font_size = 32
font_color = Color(0.0470588, 0.647059, 0.854902, 1)
outline_size = 6
outline_color = Color(0.321569, 0.258824, 0.568627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n45e2"]
font = ExtResource("3_n45e2")
font_size = 32
font_color = Color(0.0470588, 0.647059, 0.854902, 1)
outline_size = 6
outline_color = Color(0.321569, 0.258824, 0.568627, 1)

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ce3w2")
expand_mode = 1

[node name="Title" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 96.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 65
text = "photon arena"
label_settings = SubResource("LabelSettings_opfnp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 169.0
grow_vertical = 0
text = "up: w
down : s"
label_settings = SubResource("LabelSettings_ce3w2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -398.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "up: up arrow
down: down arrow"
label_settings = SubResource("LabelSettings_n45e2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_opfnp")

[node name="Play" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
offset_left = -152.0
offset_top = -52.0
offset_right = 153.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("1_48xlc")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "play"

[node name="settings" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
offset_left = -160.0
offset_top = 36.0
offset_right = 160.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("1_48xlc")
theme_override_font_sizes/font_size = 50
text = "settings"

[node name="Quit" type="Button" parent="VBoxContainer/Control"]
layout_mode = 2
offset_left = -152.0
offset_top = 124.0
offset_right = 153.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("1_48xlc")
theme_override_font_sizes/font_size = 50
text = "quit"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_opfnp")

[connection signal="mouse_entered" from="VBoxContainer/Control/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Control/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Control/settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Control/settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Control/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Control/Quit" to="." method="_on_quit_pressed"]
